<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NavigationDrawerExercise</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Nav Drawer Menu Items -->
    <string name="south_park">South Park</string>
    <string name="family_guy">Family Guy</string>
    <string name="simpsons">The Simpsons</string>
    <string name="futurama">Futurama</string>
    <string name="cartoon_wars">Cartoon Wars</string>
    <string name="simpsorama">Simpsorama</string>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
