<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:title="@string/cartoon_wars">
            <menu>
                <item
                    android:id="@+id/nav_south_park"
                    android:icon="@drawable/ic_south_park"
                    android:title="@string/south_park"></item>
                <item
                    android:id="@+id/nav_family_guy"
                    android:icon="@drawable/ic_family_guy"
                    android:title="@string/family_guy"></item>
            </menu>
        </item>
        <item android:title="@string/simpsorama">
            <menu>
                <item
                    android:id="@+id/nav_simpsons"
                    android:icon="@drawable/ic_simpsons"
                    android:title="@string/simpsons"></item>
                <item
                    android:id="@+id/nav_futurama"
                    android:icon="@drawable/ic_futurama"
                    android:title="@string/futurama"></item>
            </menu>
        </item>
    </group>
</menu>